// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterBar FooterBar.Button 1`] = `
<div>
  <taro-view-core
    class="mx-footer-bar"
  >
    <taro-button-core
      class="mx-btn mx-footer-bar-btn"
    >
      test
    </taro-button-core>
  </taro-view-core>
</div>
`;

exports[`FooterBar FooterBar.Icon 1`] = `
<div>
  <taro-view-core
    class="mx-footer-bar"
  >
    <taro-button-core
      class="mx-btn mx-footer-bar-icon"
    >
      test
    </taro-button-core>
  </taro-view-core>
</div>
`;

exports[`FooterBar basic 1`] = `
<div>
  <taro-view-core
    class="mx-footer-bar"
  >
    test
  </taro-view-core>
</div>
`;
